--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -206,11 +206,11 @@ Based on the experimental observations and a numerical simulation, we uncover th
 % \Include{GdMn2O5}
 % \Include{Cr}
 
-\Include{Softening}
-% \appendix
-% \Include{DFT}
-% \Include{Wannier}
-% \Include{FEM}
+% \Include{Softening}
+\appendix
+\Include{DFT}
+\Include{Wannier}
+\Include{FEM}
 \backmatter
 % \bibliography{references}
 \printindex
